# devomedRobot

./: .gitignore  .~lock.Discrete simulation of acc and jerk limits.ods#  CMakeLists (copy).txt  CMakeLists.txt  CopyFile.cmake  Discrete simulation of acc and jerk limits.ods  Discrete simulation of acc and jerk limits_withPID.ods_0.ods  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  compile_commands.json  firstGUI.glade~  output.csv  suzanne_tex.dds
common/: shader.cpp
common/headers/: common.hpp  controls.h  global_struct.h  robot_structs.hpp  stdafx.hpp  utils.hpp
common/source/: common.cpp  controls.cpp  global_struct.cpp  texture.cpp  utils.cpp
externalGL/: Makefile  cmake_install.cmake
externalGL/glfw-3.1.2/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
externalGL/glfw-3.1.2/docs/: Doxyfile  Makefile
externalGL/glfw-3.1.2/docs/html/: annotated.html  bug.html  build.html  build_8dox.html  classes.html  compat.html  compat_8dox.html  compile.html  compile_8dox.html  context.html  context_8dox.html  dir_7d046523570a4bf058ddf3b10b545b6c.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_defs_b.html  globals_defs_c.html  globals_defs_d.html  globals_defs_f.html  globals_defs_g.html  globals_defs_h.html  globals_defs_i.html  globals_defs_j.html  globals_defs_k.html  globals_defs_l.html  globals_defs_m.html  globals_defs_n.html  globals_defs_o.html  globals_defs_p.html  globals_defs_r.html  (+57 more)
externalGL/glfw-3.1.2/examples/: Makefile
externalGL/glfw-3.1.2/src/: Makefile  cmake_install.cmake
externalGL/glfw-3.1.2/tests/: Makefile
glade/: #window_main.glade#  gui.css  window_main.glade  window_main.glade~  window_main2.glade  window_main2.glade~  window_main3.glade  window_main3.glade~
graphics/: plot2d.cpp  plot2x2d.cpp
graphics/headers/: glarea-app-window.h  glarea-app.h  gui.h  plot2d.h  plot2dTest.h  plot3d.h
graphics/shaders/: SimpleFragmentShader.fragmentshader
graphics/source/: glarea-app-window.cpp  gui.cpp  plot2d.cpp  plot2dTest.cpp  plot3d.cpp
src/: lowpass_filter_ogl_joint_not.cpp  lowpass_no_eigen.cpp  lowpass_velocity.cpp  lowpass_velocity_cruisetest.cpp  ogl_plot.cpp
src/apps/: lowpass_velocity_cruisetest.cpp  main_start_threads.cpp  merged.cpp  playground.cpp
src/examples/: ogl_plot.cpp
src/functions/headers/: button.h  functions.h  pid.h
src/functions/source/: button.cpp  functions.cpp  pid.cpp
src/graphics/: plot2d.cpp  plot2d.h  plot2x2d.h
src/headers/: functions.h  pid.h
src/old examples/: control_loop.cpp  gnuplot.cpp  gui_thread.cpp  gui_thread.h  lowpass_filter_ogl.cpp  lowpass_filter_ogl_joint.cpp  lowpass_filter_test.cpp  pid.cpp  pid.h  robot_loop_thread.cpp
src/shaders/: SimpleVertexShader.vertexshader
src/source/: pid.cpp
src/threads/headers/: calculate_velocity_thread.h  cartesian_velocity_thread.hpp  communication_thread.h  gui_thread_1.h  keyboard_input_thread.h  pd.hpp  pd_quat.hpp  pd_vec3d.hpp  plot_thread.h  qp_control.hpp  robot_loop_thread.h  solver.h  solver_thread.hpp  track_thread.h
src/threads/source/: calculate_velocity_thread.cpp  cartesian_velocity_thread.cpp  communication_thread.cpp  gui_thread.cpp  gui_thread_1.cpp  keyboard_input_thread.cpp  ldl.cpp  matrix_support.cpp  pd_quat.cpp  pd_vec3d.cpp  plot_thread.cpp  qp_control.cpp  robot_loop_thread.cpp  solver.cpp  solver_thread.cpp  track_thread.cpp
